monetdb5/tests/BugsViaSourgeforce/Tests/ID.914155.mal
# Monet Mil to Mal compiler
# Copyright (c) 2001-2004, CWI. All rights reserved.

#Predefined code segment
#The compiler can not guarantee an accurate compilation,
#because MIL unlike MAL is a dynamically typed language.
#A few guidelines to maximize usefullness.
#- make the type of variables explicit, in particular 'nil'
#- upon advice of M2m to remap identifiers, change it in your program directly
#use the "mil_schema" for additional support routines
#	io.print("# reduced size to limit runtime\n");
	N := 10000;
#	io.print("#1000000;\n");
	Li := 100;
#	io.print("#1000;\n");
	Lj := 1000;
#	io.print("#1000;\n");
#	io.print("");
	aa_a := bbp.getNames();
	ba_a := reverse(aa_a);
	ca_a := exist(ba_a,"a");
barrier	da_a := not(ca_a);
#	io.print("if (not(view_bbp_name.reverse().exist(\"a\"))) {");
	ea_a := commit();
#	io.print("\tcommit();");
	fa_a := new(nil:void,nil:dbl,N);
	a := bat.setName(fa_a,"a");
#	io.print("\tvar a := bat(void,dbl,N).rename(\"a\");");
	i := 0;
#	io.print("\tvar i := 0;");
barrier	ga_a := true;
barrier	ha_a := <(i,N);
!ERROR: "	var i := 0;"
!        																													^
! syntax error, unexpected TOK_IDENT, expecting '{'.
#Identifer 'rename' mapped to 'bat.setName'
#Identifer 'view_bbp_name' mapped to 'bbp.getNames()'
